To toList() fixes.